@@ -18,9 +18,9 @@ all: srczip rpm win
 cli: pktriggercord-cli
 install: install-app
 
-OBJS = pslr.o pslr_scsi.o
+OBJS = pslr.o pslr_scsi.o pslr_lens.o
 WIN_DLLS_DIR=win_dlls
-SOURCE_PACKAGE_FILES = Makefile Changelog COPYING INSTALL BUGS pentax.rules samsung.rules pslr_scsi.h pslr_scsi.c pslr_scsi_linux.c pslr_scsi_win.c pslr.h pslr.c pktriggercord.c pktriggercord-cli.c pktriggercord.glade $(SPECFILE) $(WIN_DLLS_DIR)
+SOURCE_PACKAGE_FILES = Makefile Changelog COPYING INSTALL BUGS pentax.rules samsung.rules pslr_scsi.h pslr_scsi.c pslr_scsi_linux.c pslr_scsi_win.c pslr.h pslr.c exiftool_pentax_lens.txt pslr_lens.h pslr_lens.c pktriggercord.c pktriggercord-cli.c pktriggercord.glade $(SPECFILE) $(WIN_DLLS_DIR)
 TARDIR = pktriggercord-$(VERSION)
 SRCZIP = pkTriggerCord-$(VERSION).src.tar.gz
 
@@ -85,8 +85,13 @@ rpm: srcrpm
 WIN_CFLAGS=$(CFLAGS) -I$(WINMINGW)/include/gtk-2.0/ -I$(WINMINGW)/lib/gtk-2.0/include/ -I$(WINMINGW)/include/atk-1.0/ -I$(WINMINGW)/include/cairo/ -I$(WINMINGW)/include/gdk-pixbuf-2.0/ -I$(WINMINGW)/include/glib-2.0 -I$(WINMINGW)/lib/glib-2.0/include -I$(WINMINGW)/include/pango-1.0/ -I$(WINMINGW)/include/libglade-2.0/
 WIN_LDFLAGS=-lgtk-win32-2.0 -lgdk-win32-2.0 -lgdk_pixbuf-2.0 -lgobject-2.0 -lglib-2.0 -lgio-2.0  -lglade-2.0
 
+# converting lens info from exiftool
+exiftool_pentax_lens.txt:
+	cat /usr/lib/perl5/vendor_perl/5.10.1/Image/ExifTool/Pentax.pm | sed -n '/my %pentaxLensTypes/,/pentaxModelID/p' | sed -e "s/[ ]*'\([0-9]\) \([0-9]\{1,3\}\)' => '\(.*\)',.*/{\1, \2, \"\3\"},/g;tx;d;:x" > $@
+
 # Windows cross-compile
 win: clean
+	$(WINGCC) $(WIN_CFLAGS) -c pslr_lens.c
 	$(WINGCC) $(WIN_CFLAGS) -c pslr_scsi.c
 	$(WINGCC) $(WIN_CFLAGS) -c pslr.c
 	$(WINGCC) -mms-bitfields -DVERSION='"$(VERSION)"'  pktriggercord-cli.c $(OBJS) -o pktriggercord-cli.exe $(WIN_CFLAGS) $(WIN_LDFLAGS) -L.
