@@ -1,0 +1,33 @@
+/*
+    pkTriggerCord
+    Copyright (C) 2011 Andras Salamon <andras.salamon@melda.info>
+    Remote control of Pentax DSLR cameras.
+
+    based on:
+
+    PK-Remote
+    Remote control of Pentax DSLR cameras.
+    Copyright (C) 2008 Pontus Lidman <pontus@lysator.liu.se>
+
+    Pentax lens database comes from ExifTool ( http://www.sno.phy.queensu.ca/~phil/exiftool/ )
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ */
+#ifndef PSLR_LENS_H
+#define PSLR_LENS_H
+
+#include <stdint.h>
+
+const char *get_lens_name( uint32_t id1, uint32_t id2);
+#endif
